src/test/resources/typeSystemTestModels/valid/methods/AbstractMethodDefinition.java
package typeSystemTestModels.valid.methods;

public abstract class AbstractMethodDefinition {

  public abstract String getString();

  public interface A {
    public abstract String getString1();
  }

}