src/test/resources/typeSystemTestModels/invalid/methods/AbstractMethodDefinition.java
package typeSystemTestModels.invalid.methods;

public class AbstractMethodDefinition {

  public abstract String getString();

}
